--- a/views/hello.pug
+++ b/views/hello.pug
@@ -1,4 +1,10 @@
 extends layout.pug
 
 block content
-  input(type="text")
+  if userName
+    h2 Welcome, #{userName}!
+  else
+    form(action="/hello" method="post")
+      label Please enter your name:
+        input(type="text" name="userName")
+      button(type="submit") Submit
