setup redirects for user or not, setup goodbye to remove user

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout.pug
   
 block content
   section#content
-    h2 Welcome, student!
+  if userName
+    h2 Welcome, #{userName}!
+    form(action="/goodbye" method="post")
+      button(type="submit") Goodbye!
