add username and goodbye button elsewhere

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,5 @@ extends layout.pug
   
 block content
   section#content
-  if userName
-    h2 Welcome, #{userName}!
-    form(action="/goodbye" method="post")
-      button(type="submit") Goodbye!
+  p  
+    a(href='/cards') Begin!
