--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,10 @@ html(lang="en")
   body
     header
       h1 Flash Cards
+      if userName
+        h2 Welcome, #{userName}!
+        form(action="/goodbye" method="post")
+          button(type="submit") Goodbye!
     block content
     footer
       p An app to help you study.
