--- a/views/card.pug
+++ b/views/card.pug
@@ -1,17 +1,19 @@
-extends layout.pug
+extends app
 
-block content
-  section#content
-    //- if statement below with each loop NOTE: how color variable is passed to style attr and as text to li tag
-    if colors
-      ul
-        each color in colors
-          li(style={color: color}) #{color}
-    //- another way to pass a variable 
-    h2= text
-    if hint
-      p
-        i Hint: #{hint}
-    a(href=`${id}?side=${sideToShow}`)= sideToShowDisplay
-    br
-    a(href='/cards') Next Card
+block card
+  section(class=`flashcards`)
+    .card(class=`card-${side}`)
+      .card-header
+      h1.card-title= side
+      #content
+        h2= text
+        if hint
+          p.hint
+            i= hint
+      .card-flip-wrap
+        a(href=`${id}?side=${sideToShow}`)
+          img.card-flip(src='/static/img/flip.svg')
+      .card-next
+        a(href='/cards')
+          img(src="/static/img/next.svg")
+    script(src='/static/js/app.js')
